# Satellite-1-Raspberry-Controller

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
extras/: asoundrc
sat1_control/: __init__.py  __main__.py  _amp.py  _xmos.py  buttons.py  speaker.py
sat1_control/led/: animator.py  controller.py  patterns.py
src/sat1/: __init__.py  __main__.py  buttons.py  led_controller.py  misc.py  speaker_controller.py
src/sat1/led/: animator.py  interface.py
src/sat1/tas2780/: __init__.py
src/sat1/utils/: utils.py
src/sat1_control/: __main__.py  buttons.py  led_controller.py  misc.py  speaker_controller.py
src/sat1_control/led/: animator.py  interface.py
src/sat1_control/led/pattern/: default_pattern.py
src/sat1_control/tas2780/: __init__.py  consts.py
src/sat1_control/utils/: i2c_interface.py  spi_interface.py
